comenzando add_dog form

--- a/doggyDayCareCustomerInterface/templates/doggyDayCareCustomerInterface/index.html
+++ b/doggyDayCareCustomerInterface/templates/doggyDayCareCustomerInterface/index.html
@@ -12,6 +12,7 @@
             <option class="optionVal" value="{% url 'aboutUs' %}">About Us</option>
             <option class="optionVal" value="{% url 'contactUs' %}">Contact Us</option>
             <option class="optionVal" value="{% url 'newProfile' %}">Create New Profile</option>
+            <option class="optionVal" value="{% url 'insert_custumer' %}">Insert a Customer</option>
         </select>
     </div>
  {% endblock %}
