--- a/doggyDayCareCustomerInterface/templates/doggyDayCareCustomerInterface/index.html
+++ b/doggyDayCareCustomerInterface/templates/doggyDayCareCustomerInterface/index.html
@@ -13,6 +13,8 @@
             <option class="optionVal" value="{% url 'contactUs' %}">Contact Us</option>
             <option class="optionVal" value="{% url 'newProfile' %}">Create New Profile</option>
             <option class="optionVal" value="{% url 'insert_custumer' %}">Insert a Customer</option>
+            <option class="optionVal" value="{% url 'add_dog' %}">Add a Dog</option>
+
         </select>
     </div>
  {% endblock %}
