formulario appointment terminado

--- a/doggyDayCareCustomerInterface/templates/doggyDayCareCustomerInterface/base.html
+++ b/doggyDayCareCustomerInterface/templates/doggyDayCareCustomerInterface/base.html
@@ -18,7 +18,7 @@
     
     <div id="homePageLinks" >
         <ul>
-            <li><a href="{% url 'logInPage' %}">Log in</a></li>
+            <li><a href="{% url 'index' %}">Home</a></li>
         </ul>
     </div>
 
