--- a/doggyDayCareCustomerInterface/templates/doggyDayCareCustomerInterface/index.html
+++ b/doggyDayCareCustomerInterface/templates/doggyDayCareCustomerInterface/index.html
@@ -14,6 +14,8 @@
             <option class="optionVal" value="{% url 'newProfile' %}">Create New Profile</option>
             <option class="optionVal" value="{% url 'insert_custumer' %}">Insert a Customer</option>
             <option class="optionVal" value="{% url 'add_dog' %}">Add a Dog</option>
+            <option class="optionVal" value="{% url 'create_appointment' %}">Create an Appointment</option>
+            
 
         </select>
     </div>
